k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: legacy-park
  namespace: legacy-park
spec:
  parentRefs:
    - name: main
      namespace: kube-system
  hostnames:
    - "legacypark.astramarisclient.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: legacy-park
          port: 80
